BARC UAT/src/objects/Api_Job_Log__c.object
<CustomObject>
    <fields>
        <fullName>Api_Record_Count__c</fullName>
        <label>Api Record Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Offset__c</fullName>
        <label>End Offset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Detail_Contact__c</fullName>
        <label>Error Detail Contact</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Detail_Member__c</fullName>
        <label>Error Detail Member</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Detail_TV__c</fullName>
        <label>Error Detail TV</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Details_Survey__c</fullName>
        <label>Error Details Survey</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Records__c</fullName>
        <label>Num of Records</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Offset__c</fullName>
        <label>Start Offset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Api Job Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Detail_Contact__c</columns>
        <columns>Error_Details_Survey__c</columns>
        <columns>Error_Detail_Member__c</columns>
        <columns>Error_Detail_TV__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Api Job Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Api Job Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>